objects/ssot__ProviderVisit__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BookingStatusReason__c</fullName>
        <label>Booking Status Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BookingStatus__c</fullName>
        <label>Booking Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChannelType__c</fullName>
        <label>Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplianceStatementText__c</fullName>
        <label>Compliance Statements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ComplianceStmtAgreeStatus__c</fullName>
        <label>Compliance Statement Agreement Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Visit Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvitationEmailAddress__c</fullName>
        <label>Invitation Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvitationEmailBouncedReasonText__c</fullName>
        <label>Invitation Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvitationEmailStatus__c</fullName>
        <label>Invitation Email Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAdhocProviderVisit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhoc Provider Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsBackdatedSbmtVldSkipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backdated Submit Validation Skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsBackdatedSgnVldSkipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backdated Signature Validation Skipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsConfirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfflineModeSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Mode Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfflineModeSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline Mode Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsRecordOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSignedAwayFrmAllowDstn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Away From Allowed Distance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitAwayFrmAllowDstn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Away From Allowed Distance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__NextProviderVisitObjectiveText__c</fullName>
        <label>Next Provider Visit Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextPrvdVisitObjectiveType__c</fullName>
        <label>Next Provider Visit Objective Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OnSubmitGeolocationId__c</fullName>
        <label>On Submit Geolocation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhysicalFormIdentifier__c</fullName>
        <label>Physical Form Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreProviderVisitNotesText__c</fullName>
        <label>Pre-Provider Visit Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProvVisitDlvrSampleCount__c</fullName>
        <label>Provider Visit Delivered Sample Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProvVisitMktItemCount__c</fullName>
        <label>Provider Visit Marketing Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProvVisitProdDtlCount__c</fullName>
        <label>Provider Visit Product Detailing Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProvVisitReqSampleCount__c</fullName>
        <label>Provider Visit Requested Sample Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ProviderVisit_VisitId_map_Visit_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisit_VisitId_map_Visit_Id_N_1</label>
        <referenceTo>ssot__Visit__dlm</referenceTo>
        <relationshipLabel>ProviderVisit_VisitId_map_Visit_Id_N_1</relationshipLabel>
        <relationshipName>ProviderVisit_VisitId_map_Visit_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__RemoteAttendanceStatus__c</fullName>
        <label>Remote Attendance Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShippingAddressId__c</fullName>
        <label>Shipping Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitDelayReasonText__c</fullName>
        <label>Submit Delay Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitDelayReasonType__c</fullName>
        <label>Submit Delay Reason Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitGeolcMissingReasonType__c</fullName>
        <label>Submit Geolocation Missing Reason</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubmitGeolocationTimestamp__c</fullName>
        <label>Submit Geolocation Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VisitId__c</fullName>
        <label>Visit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561367202_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisit_OnSubmitGeolocationId__rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>ProviderVisit_OnSubmitGeolocationId__rel</relationshipLabel>
        <relationshipName>rel_1745561367202_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1745561370303_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderVisit_ShippingAddressId_map__rel</label>
        <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
        <relationshipLabel>ProviderVisit_ShippingAddressId_map__rel</relationshipLabel>
        <relationshipName>rel_1745561370303_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>